--- a/notebooks/Demo_FastText_Header_Model.ipynb
+++ b/notebooks/Demo_FastText_Header_Model.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "source": [
     "## Install Gretel Tools\n",
-    "   * Python 3.6+ required\n",
+    "   * Python 3.7+ required\n",
+    "   \n",
     "   * See https://github.com/gretelai/gretel-tools/blob/master/README.md"
    ]
   },
@@ -40,7 +41,9 @@
    "outputs": [],
    "source": [
     "from gretel_tools import headers\n",
-    "h = headers.HeaderAnalyzer()"
+    "\n",
+    "# NOTE: If the path to the model does not exist, it will be downloaded for you\n",
+    "h = headers.HeaderAnalyzer(model_file=\"model.bin.gz\")"
    ]
   },
   {
@@ -58,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h.similar_by_word(\"telephone\", topn=30, sort_by = \"freq\")[0:10]"
+    "h.similar_by_word(\"first_name\", topn=30, sort_by = \"freq\")[0:10]"
    ]
   },
   {
@@ -92,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h.similarity(\"gender\",\"sex\")"
+    "h.similarity(\"gender\", \"sex\")"
    ]
   },
   {
@@ -109,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h.similarity(\"street\",\"address\")"
+    "h.similarity(\"street\" ,\"address\")"
    ]
   },
   {
@@ -126,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h.similarity(\"player\",\"athlete\")"
+    "h.similarity(\"player\", \"athlete\")"
    ]
   },
   {
@@ -151,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.9 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f23e414fc22797ad4b0fe303412f49c60f7f0cdce92eeeebb27cf62d96062330"
+   }
   }
  },
  "nbformat": 4,
